# python-spanner

./: .coverage.aakashanand-mac.roam.internal.57697.XftvVBix.c  .coveragerc  .gitignore  .release-please-manifest.json  .repo-metadata.json  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.rst  UPGRADING.md  automated-benchmarking-testing.MD  automated-benchmarking-testing.py  benchmark_multiprocess_pools.py  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.py  synth.metadata  synth.py  test.py  test_finally.py  test_instance_id_bug.py  testing.MD
.cross_sync/: generate.py  transformers.py
.devcontainer/: Dockerfile  requirements.txt
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  release-please.yml  snippet-bot.yml  sync-repo-settings.yaml
.github/workflows/: docs.yml  integration-tests-against-emulator-with-multiplexed-session.yaml  integration-tests-against-emulator-with-regular-session.yaml  integration-tests-against-emulator.yaml  lint.yml  mock_server_tests.yaml  presubmit.yaml  test-workflow.yaml  unittest.yaml  unittest.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements-auth.txt  test-samples-impl.sh
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.librarian/: state.yaml
docs/: advanced-session-pool-topics.rst  batch-api.rst  batch-usage.rst  client-usage.rst  conf.py  database-usage.rst  multiprocessing.rst  opentelemetry-tracing.rst  snapshot-api.rst  snapshot-usage.rst  table-usage.rst  transaction-api.rst  transaction-usage.rst
examples/: grpc_instrumentation_enabled.py  trace.py
myenv/: pyvenv.cfg
scripts/: fixup_database_v1_keywords.py  fixup_instance_v1_keywords.py  fixup_spanner_admin_database_v1_keywords.py  fixup_spanner_admin_instance_v1_keywords.py  fixup_spanner_v1_keywords.py
testing/: constraints-3.10.txt  constraints-3.12.txt  constraints-3.14.txt  constraints-3.6.txt  constraints-3.7.txt  constraints-3.9.txt
tests/: _builders.py  _fixtures.py  _helpers.py
(+756 files in other folders)
