[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-cloud-spanner"
authors = [{ name = "Google LLC", email = "googleapis-packages@google.com" }]
license = { text = "Apache 2.0" }
requires-python = ">=3.7"
description = "Google Cloud Spanner API client library"
readme = "README.rst"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Internet",
]
dependencies = [
  "google-api-core[grpc] >= 1.34.0, <3.0.0dev,!=2.0.*,!=2.1.*,!=2.2.*,!=2.3.*,!=2.4.*,!=2.5.*,!=2.6.*,!=2.7.*,!=2.8.*,!=2.9.*,!=2.10.*",
  "google-cloud-core >= 1.4.4, < 3.0dev",
  "grpc-google-iam-v1 >= 0.12.4, <1.0.0dev",
  "proto-plus >= 1.22.0, <2.0.0dev",
  "sqlparse >= 0.4.4",
  "proto-plus >= 1.22.2, <2.0.0dev; python_version>='3.11'",
  "protobuf>=3.20.2,<6.0.0dev,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5",
  "grpc-interceptor >= 0.15.4",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/googleapis/python-spanner"

[project.optional-dependencies]
tracing = [
  "opentelemetry-api >= 1.22.0",
  "opentelemetry-sdk >= 1.22.0",
  "opentelemetry-semantic-conventions >= 0.43b0",
]
libcst = ["libcst >= 0.2.5"]

[tool.setuptools]

[tool.setuptools.dynamic]
version = { attr = "google.cloud.spanner_v1.gapic_version.__version__" }

[tool.setuptools.packages.find]
include = ["google*"]
